--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,14 @@
 # You can also run `make switch-to-poetry` to use the poetry package manager.
 
 pytest
+pytest-mock
+ruff
+scipy
+nbval
+black
+jupyter
+mypy
+isort
+pytest-cov
+gitchangelog
+coverage
